k8s/cluster-a/02-root-server-access.yaml
apiVersion: v1
kind: Service
metadata:
  name: spire-root-server
  namespace: spire-system
spec:
  ports:
    - name: grpc
      port: 8081
      protocol: TCP
      targetPort: 30081
